--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/apriltag_mit
-	previous = 
-	base = 8f04450
+	previous = 8f04450
+	base = 9dfe9ea
 	trim = 
 	trimbase = 
