--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/apriltag_mit
-	previous = 
-	base = e96bb89
+	previous = e96bb89
+	base = 4fae3d6
 	trim = 
 	trimbase = 
