--- a/tracks.yaml
+++ b/tracks.yaml
@@ -8,7 +8,7 @@ tracks:
     - git-bloom-generate -y rosrelease :{ros_distro} --source upstream -i :{release_inc}
     - git-bloom-generate -y rosdebian --prefix release/:{ros_distro} :{ros_distro}
       -i :{release_inc} --os-name debian
-    devel_branch: humble
+    devel_branch: release
     last_version: 1.1.2
     name: apriltag_mit
     patches: null
