--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/apriltag_mit
-	previous = 
-	base = 548e88e
+	previous = 548e88e
+	base = b84c4fc
 	trim = 
 	trimbase = 
