--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/apriltag_mit
-	previous = 
-	base = 7b77688
+	previous = 7b77688
+	base = 95ad1ce
 	trim = 
 	trimbase = 
