--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/apriltag_mit
-	previous = 
-	base = a15d10e
+	previous = a15d10e
+	base = 3696131
 	trim = 
 	trimbase = 
