--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/apriltag_mit
-	previous = 
-	base = d1de846
+	previous = d1de846
+	base = 4a99dfd
 	trim = 
 	trimbase = 
